# Yevune

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  openapi.yaml  rust-toolchain.toml
.agents/skills/git-commit/: SKILL.md
.githooks/: commit-msg  pre-commit  pre-merge-commit
.github/workflows/: ci.yml
.superpowers/sdd/: m3-final-fix-report.md  m3-task-5-report.md  m3-task-6-report.md  m3-task-7-report.md  m4-library-discovery-report.md  task-7-report.md
clients/apple/: Package.swift
clients/apple/Sources/MusicApp/: App.swift  LaunchCoordinator.swift
clients/apple/Sources/Yevune/: App.swift
clients/apple/Tests/MusicAppTests/: AlbumGridViewTests.swift  LibraryViewModelTests.swift  LoginViewModelTests.swift  PlaylistViewModelTests.swift  TagEditorViewModelTests.swift
clients/apple/Tests/YevuneTests/: AccessControlViewModelTests.swift  AdminViewModelTests.swift  AlbumGridViewTests.swift  AlbumWorkbenchPolicyTests.swift  ArtistDetailViewModelTests.swift  AuthenticatedArtworkLoaderTests.swift  EditorSheetLifecycleTests.swift  FavoriteLibraryViewModelTests.swift  LibraryBrowseViewModelTests.swift  LibraryPresentationTests.swift  (+21 more)
contract/: Cargo.toml
contract/src/: access.rs  lib.rs  lyrics.rs  media.rs  playlist.rs  response.rs  stream.rs  user.rs
contract/tests/: response_test.rs  serde_test.rs
core/: Cargo.toml  uniffi.toml
core/src/: auth.rs  client.rs  config.rs  error.rs  ffi_types.rs  http.rs  lib.rs
core/src/api/: access.rs  admin.rs  annotation.rs  browse.rs  lyrics.rs  manage.rs  media.rs  mod.rs  playlist.rs  scan.rs
core/tests/: access_test.rs  admin_test.rs  annotation_test.rs  browse_test.rs  delete_move_test.rs  login_test.rs  lyrics_test.rs  manage_test.rs  playlist_test.rs  scan_test.rs  starred_test.rs  upload_test.rs
deploy/: garage.toml
docs/adr/: 0001-rust-core-native-ui.md  0002-sqlite-no-postgres-redis.md  0003-opensubsonic-plus-extensions.md  0004-garage-sole-source.md  0005-object-store-over-aws-sdk.md  0006-garage-authoritative-bucket-single-writer.md  README.md
docs/superpowers/plans/: 2026-07-10-handoff-prompts.md  2026-07-10-music-server.md  2026-07-10-yevune-server.md  2026-07-11-mac-client-m1.md  2026-07-12-mac-client-one-click-launch.md  2026-07-12-mac-library-browse-plan.md  2026-07-12-mac-library-workbench.md  2026-07-12-mac-multilevel-playlist.md  2026-07-12-yevune-brand-migration.md  2026-07-14-mac-access-control.md  2026-07-14-mac-user-role-management.md  2026-07-15-mac-playback-shell.md  2026-07-16-mac-library-discovery.md  2026-07-17-mac-album-workbench.md
docs/superpowers/specs/: 2026-07-10-music-server-design.md  2026-07-10-yevune-server-design.md  2026-07-11-mac-client-design.md  2026-07-12-mac-client-one-click-launch-design.md  2026-07-12-mac-library-browse-design.md  2026-07-12-mac-library-workbench-design.md  2026-07-12-mac-multilevel-playlist-design.md  2026-07-12-mac-track-operations-design.md  2026-07-12-yevune-renaming-design.md  2026-07-14-mac-access-control-design.md  2026-07-14-mac-user-role-management-design.md  2026-07-15-mac-playback-shell-design.md  2026-07-16-mac-library-discovery-design.md  2026-07-17-mac-album-workbench-design.md  2026-07-18-mac-favorites-library-design.md  2026-07-18-mac-favorites-rating-design.md  2026-07-18-mac-playback-history-design.md  2026-07-18-mac-playlist-drag-drop-design.md  2026-07-18-mac-playlist-workbench-design.md  2026-07-18-mac-search-track-workbench-design.md  2026-07-18-mac-synced-lyrics-design.md  2026-07-19-mac-playback-commands-design.md
scripts/: run-mac-client.sh  setup-git-hooks.sh  validate-commit-author.sh  validate-commit-msg.sh  validate-no-merge-commit.sh
scripts/tests/: run-mac-client-test.sh  test-validate-no-merge-commit.sh  test-yevune-brand.sh
server/: Cargo.toml
server/migrations/: 0001_init.sql
server/src/: config.rs  lib.rs  main.rs  openapi.rs  setup.rs
server/src/api/: annotation.rs  browsing.rs  media.rs  mod.rs  playlist.rs  response.rs  scan.rs  search.rs  state.rs  system.rs  user.rs
server/src/api/ext/: access.rs  cover.rs  library.rs  mod.rs  playlist_tree.rs  role.rs  scan.rs  user.rs
server/src/auth/: bearer.rs  middleware.rs  mod.rs  password.rs  subsonic.rs  user_admin.rs
server/src/index/: access.rs  mod.rs  repo_access.rs  repo_annotation.rs  repo_media.rs  repo_playlist.rs  repo_transcode_cache.rs  repo_user.rs
server/src/scanner/: cover.rs  incremental.rs  lyrics.rs  mod.rs  tags.rs
server/src/storage/: garage.rs  memory.rs  mod.rs
server/src/transcode/: cache.rs  decision.rs  ffmpeg.rs  mod.rs  stream.rs
server/tests/: access_control_test.rs  auth_test.rs  deploy_test.rs  ext_test.rs  health_test.rs  index_test.rs  media_access_test.rs  openapi_test.rs  opensubsonic_access_test.rs  opensubsonic_test.rs  scanner_test.rs  setup_test.rs  storage_garage_test.rs  storage_test.rs  transcode_test.rs
server/tests/common/: mod.rs
server/tests/fixtures/scanner/: a.flac  b.flac  large.flac
(+80 files in other folders)
