[workspace]
resolver = "2"

[package]
name = "music-server"
version = "0.1.0"
edition = "2021"
description = "自托管家庭音乐流媒体服务端（OpenSubsonic 兼容）"
license = "MIT OR Apache-2.0"

[dependencies]
# HTTP 框架（红线锁定）
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "signal"] }
# 配置：TOML 文件 + 环境变量分层覆盖（标准库无法胜任分层反序列化）
config = { version = "0.14", default-features = false, features = ["toml"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# 结构化日志（红线锁定）
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# 数据库（红线锁定：SQLite via sqlx；运行时查询，不启用编译期宏校验）
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
# 跨端共享 DTO
contract = { path = "../contract" }
object_store = { version = "0.14.0", features = ["aws"] }
async-trait = "0.1.89"
bytes = "1.12.1"
futures = "0.3.32"

[dev-dependencies]
# 集成测试用 oneshot 驱动 Router，无需真实绑定端口
tower = { version = "0.5", features = ["util"] }
# 集成测试用临时 SQLite 文件
tempfile = "3"
